LPFG-414 correct order (+2 squashed commits) Squashed commits: [ddcafca] fix for short descriptions [639f43a] LPFG-414 separate out booked f2f courses

--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -53,7 +53,7 @@ $module: 'discite';
 		@extend %disciteRowDiv;
 
 		@include media(desktop) {
-			padding-right: 300px;
+			width: calc(100% - 300px);
 		}
 
 		@include m(search) {
